--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,31 @@ bld/
 .vs/
 # Jetbrains editors
 .idea/
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 #Node modules
 node_modules/
 # Uncomment if you have tasks that create the project's static files in wwwroot
