--- a/.github/workflows/SonarQube.yml
+++ b/.github/workflows/SonarQube.yml
@@ -22,6 +22,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: List project files
+        shell: pwsh
+        run: |
+          Write-Host "Searching for .csproj files..."
+          Get-ChildItem -Recurse -Filter *.csproj
       - name: Cache SonarQube Cloud packages
         uses: actions/cache@v4
         with:
