--- a/.github/workflows/DotNet environment.yml
+++ b/.github/workflows/DotNet environment.yml
@@ -21,7 +21,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore ./ChatPLC_Backend.csproj
+      run: dotnet restore
+      working-directory: ChatPLC_Backend
     - name: Build
       run: dotnet build --no-restore
     - name: Test
