--- a/.github/workflows/DotNet environment.yml
+++ b/.github/workflows/DotNet environment.yml
@@ -21,8 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore ./ChatPLC_Backend
-      working-directory: ChatPLC
+      run: dotnet restore home/runner/work/ChatPLC/ChatPLC_Backend
     - name: Build
       run: dotnet build --no-restore
     - name: Test
