--- a/.github/workflows/DotNet environment.yml
+++ b/.github/workflows/DotNet environment.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore home/runner/work/ChatPLC/ChatPLC_Backend
+      run: dotnet restore home/runner/work/ChatPLC/ChatPLC_Backend/ChatPLC_Backend.csproj
     - name: Build
       run: dotnet build --no-restore
     - name: Test
