--- a/.github/workflows/DotNet environment.yml
+++ b/.github/workflows/DotNet environment.yml
@@ -21,7 +21,8 @@ jobs:
       with:
         dotnet-version: 9.0.x
     - name: Restore dependencies
-      run: dotnet restore ChatPLC_Backend/ChatPLC_Backend.csproj
+      working-directory: ChatPLC_Backend
+      run: dotnet restore ChatPLC_Backend.csproj
     - name: Build
       run: dotnet build --no-restore
     - name: Test
