--- a/.github/workflows/DotNet environment.yml
+++ b/.github/workflows/DotNet environment.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ChatPLC_Backend/ChatPLC_Backend.csproj
     - name: Build
-      working-directory: ChatPLC_Backend
-      run: dotnet build --no-restore ChatPLC_Backend.sln
+      run: dotnet build --no-restore ChatPLC_Backend/ChatPLC_Backend.sln
     - name: Test
       working-directory: ChatPLC_Backend
       run: dotnet test --no-build --verbosity normal ChatPLC_Backend.sln
