--- a/.github/workflows/DotNet environment.yml
+++ b/.github/workflows/DotNet environment.yml
@@ -15,13 +15,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repo into correct path
+      uses: actions/checkout@v4
+      with:
+        path: .
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
     - name: Restore dependencies
-      working-directory: .
       run: dotnet restore ChatPLC_Backend/ChatPLC_Backend.sln
     - name: Build
       run: dotnet build --no-restore ChatPLC_Backend/ChatPLC_Backend.sln
