--- a/.github/workflows/DotNet environment.yml
+++ b/.github/workflows/DotNet environment.yml
@@ -15,17 +15,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo into correct path
-      uses: actions/checkout@v4
-      with:
-        path: .
-    
+    - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
     - name: Restore dependencies
-      run: dotnet restore ChatPLC_Backend/ChatPLC_Backend.sln
+      run: |
+        dotnet restore ChatPLC_Backend/ChatPLC_Backend.csproj
+        dotnet restore IdentityServer/IdentityServer.csproj
     - name: Build
       run: dotnet build --no-restore ChatPLC_Backend/ChatPLC_Backend.sln
     - name: Test
