--- a/.github/workflows/DotNet environment.yml
+++ b/.github/workflows/DotNet environment.yml
@@ -21,11 +21,7 @@ jobs:
       with:
         dotnet-version: 9.0.x
     - name: Restore dependency 1
-      run: dotnet restore ChatPLC_Backend/ChatPLC_Backend.csproj
-    - name: Restore dependency 2
-      run: dotnet restore IdentityServer/IdentityServer.csproj
-    - name: Restore dependency 3
-      run: dotnet restore React.BFF/React.BFF.csproj
+      run: dotnet restore ChatPLC_Backend/ChatPLC_Backend.sln
     - name: Build
       run: dotnet build --no-restore ChatPLC_Backend/ChatPLC_Backend.sln
     - name: Test
