--- a/.github/workflows/DotNet environment.yml
+++ b/.github/workflows/DotNet environment.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
-    - name: Restore dependency 1
+    - name: Restore dependencies
       run: dotnet restore ChatPLC_Backend/ChatPLC_Backend.sln
     - name: Build
       run: dotnet build --no-restore ChatPLC_Backend/ChatPLC_Backend.sln
