--- a/.github/workflows/Deploy to SonarQube.yml
+++ b/.github/workflows/Deploy to SonarQube.yml
@@ -37,11 +37,16 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-      - name: Build and analyze
+      - name: Install dotnet-coverage
+        shell: powershell
+        run: |
+          dotnet tool install --global dotnet-coverage
+      - name: Build, test and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"ThimoBL_ChatPLC" /o:"thimobl" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build ChatPLC_Backend
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"ThimoBL_ChatPLC" /o:"thimobl" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"  /d:sonar.cs.vscoveragexml.reportsPaths=**/coverage.xml
+          dotnet build ChatPLC_Backend --no-incremental
+          dotnet-coverage collect "dotnet test ChatPLC_Backend" -f xml -o "coverage.xml"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
