--- a/.github/workflows/Deploy to SonarQube.yml
+++ b/.github/workflows/Deploy to SonarQube.yml
@@ -7,7 +7,25 @@ on:
     types: [opened, synchronize, reopened]
 jobs:
   build:
-    name: Build and analyze
+    name: Build
+    runs-on: windows-latest
+    steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu' # Alternative distribution options are available.
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Build
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        shell: powershell
+        run: dotnet build ChatPLC_Backend --no-incremental
+          
+  test:
+    name: Test
     runs-on: windows-latest
     steps:
       - name: Set up JDK 17
