--- a/.github/workflows/Deploy to SonarQube.yml
+++ b/.github/workflows/Deploy to SonarQube.yml
@@ -68,3 +68,21 @@ jobs:
           dotnet build ChatPLC_Backend --no-incremental
           dotnet-coverage collect "dotnet test ChatPLC_Backend" -f xml -o "coverage.xml"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          
+  deploy:
+    name: Deploy
+    runs-on: windows-latest
+    steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu' # Alternative distribution options are available.
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Build
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        shell: powershell
+        run: dotnet build ChatPLC_Backend --no-incremental
