--- a/chatplc_frontend/package.json
+++ b/chatplc_frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
     "react-syntax-highlighter": "^15.6.1",
+    "react-toastify": "^11.0.5",
     "typescript": "^4.4.2",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4",
